# ChangeLog for kde-misc/kanyremote
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.37 2013/09/11 15:21:14 kensington Exp $

  11 Sep 2013; Michael Palimaka <kensington@gentoo.org> kanyremote-6.2.ebuild:
  Improve python support - enforce USE dependencies, allow the package to work
  with all supported python implementations, and do not fail when an unsupported
  implementation is selected.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> kanyremote-6.2.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*kanyremote-6.2 (25 Jul 2013)

  25 Jul 2013; Chris Reffett <creffett@gentoo.org> +kanyremote-6.2.ebuild:
  Version bump, migrate to python-single-r1

  01 Apr 2013; Michael Palimaka <kensington@gentoo.org>
  -kanyremote-6.0.1.ebuild:
  Remove old.

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org> kanyremote-6.1.ebuild:
  Stable for x86, wrt bug #449634

  05 Jan 2013; Agostino Sarubbo <ago@gentoo.org> kanyremote-6.1.ebuild:
  Stable for amd64, wrt bug #449634

*kanyremote-6.1 (23 Oct 2012)

  23 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +kanyremote-6.1.ebuild:
  Version bump

  10 Sep 2012; Johannes Huber <johu@gentoo.org> -kanyremote-5.13.ebuild,
  -kanyremote-6.0.ebuild:
  Remove old.

  10 Sep 2012; Johannes Huber <johu@gentoo.org> kanyremote-6.0.1.ebuild:
  Stable for x86, wrt bug #432896

  09 Sep 2012; Agostino Sarubbo <ago@gentoo.org> kanyremote-6.0.1.ebuild:
  Stable for amd64, wrt bug #432896

  26 Aug 2012; Chris Reffett <creffett@gentoo.org> kanyremote-6.0.1.ebuild:
  Bump 6.0.1 to EAPI 4, fix the most problematic .desktop validation issue.

*kanyremote-6.0.1 (17 Aug 2012)

  17 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +kanyremote-6.0.1.ebuild:
  Version bump

  21 Jul 2012; Johannes Huber <johu@gentoo.org> kanyremote-5.13.ebuild,
  kanyremote-6.0.ebuild:
  Move from SLOT 0 to 4.

*kanyremote-6.0 (09 Jun 2012)
