@@ -5,17 +5,17 @@ AUX disable_bluetooth.patch 575 SHA256 33259b431e49aeef96b3941d1bd3506da69bea7c9
 DIST kanyremote-6.1.tar.gz 285638 SHA256 e35dc0a8d2b83d8011e850195c491b1e32bae5d8519784e62fd4320f052c9fe9 SHA512 e71b5dc33ee74c88b9cbf6663bda9162850e21f85a600d523a60cce99dd0b531cca5fee928eb654eac6f3adc3702b5b6a85f2a04b53cb969bfa8f980622a9240 WHIRLPOOL 42d7a83a4d62fbc89407c3b80a00bb9e2fe0b30afc08347b6e232a8fbc30f2c60b29dcd0caf26c98ba8c1101d0f50a7878229b0ef9e5c791e07f993bfaf07582
 DIST kanyremote-6.2.tar.gz 291205 SHA256 22a532d74b07c4c2ae45d3cf366c990e972d04bb5f6bc535dff3e45c29d98c3b SHA512 f3bd0cc2bb5aa49b2d07f90423ffdd474ff86f7efee18c38df86df79bac85d590b23ef58aa61f77686845c09c6e26a679e05cb88b1740bbe6f1e5b8d525fd7bd WHIRLPOOL 5e8a8f2416e82bad3ad68672080bc52bc9cccdeb66eca446001255aa0fd9ad427156136a353f736e42d0a4323605234b45dc42d4bf905460ec8a58dbb76147b6
 EBUILD kanyremote-6.1.ebuild 1258 SHA256 933fcc755d4889ad1cff5319e195ae0b9d16f1b39d959a6803b342a06027b378 SHA512 31b54af21c904b1eec277221e2db31778b88423dd7df955c9a34ad0785361f252ab7952a736f150f9646c4a1728651e125aac9cac867cefdf0cceac2bc8858b3 WHIRLPOOL baab4389b4cf5ad458d207fc3fb24a7753e04bda4b1391120eac8febcfd0efe65e96595f0be53804938ea49892f678f925c38833d09b088669589c01df638f01
-EBUILD kanyremote-6.2.ebuild 1429 SHA256 32792d5f0c17756c284b51effc9e8d78b66db60f28bbcf6c55071bc97ee477c6 SHA512 57ed6ef9ca68b7d9a462dbf22c4aac3f9fbddd4da1ace4c748697d4826141da76add61395b1231468a4fbdbf256a5dd6a3b1c8bb117267cfdf3f2143f4d83223 WHIRLPOOL cef432ec135b6b30bfcba47904753157f17ed5fa87937bb6c82fe7fa341e5338c992e50109d9c633f8f0c96a4ca151ea15ffc77364150b5ce8ee1ce197571f9f
-MISC ChangeLog 4879 SHA256 da46bef4bef356769267b4c9fc1618775dfc5042e505c88da6578e441e67f7e2 SHA512 6fdcf2359425f14cdaf262c057e5487e6e3c0dc2180e96698316613a8bc4f63591b43325b65b57ccdd3fb6acd9bdc6983ed1b4f70604e75dcaadd62e52e7bcae WHIRLPOOL 2ebc48751a6bcf12f9d55263f2bc2914c2e2d4bd7c3b276b367e001cd1fcacfb036a618db6e731d9a3ace9497d6212f4afdf35483f202e4a292fc32093465e4d
+EBUILD kanyremote-6.2.ebuild 1478 SHA256 1b014a463d97d9096de92580fc122d2f40044bfe07650b85dad68f1ee5436cbf SHA512 6c4b61c1ea68d5b601a7d9a4329b037168d57e1646e23edabeab976785a9f1f43dc45a1c7911194dd50c348d0e1b6388a7db21ad02d2bfe582485c8cda9a1fd7 WHIRLPOOL 73050b48ad8d1302e14641e4c4d092723a8410b26b9f13a8cbd434bf4161549bba5a8420badc1c8f019a1deb3335901d7f91667850b7ee477a081dd7b120f312
+MISC ChangeLog 5009 SHA256 a94149e1a55d5bc8443ddce1163e02ca1969f9170ab3c938a7a67deb55374b19 SHA512 7d66646302f301f8cf64229148bfa0bf14959551bb3b45da76d59984c316031cdf721aec1b54b684c404675b278f5d98fc8a2ff036fad1f4e3469bae8b86ae51 WHIRLPOOL 6ce8221ad1b6c9efe024178ea6c97d924e039b3c84fb5ddb35b22eb9c333fb810fc535b0756e60b812614b482a17ef953059957e65c6fe333b2d6712ce75e628
 MISC metadata.xml 295 SHA256 63e5e4364ccd54e92f7be18c5ec8734c3f4e6d7392cb48f445be97660e95f1fb SHA512 95769f0aae8c2459de1346732089a8002c4717c157d61061629780bc75d2312b81afe386e936feea3e105c27169daa2975fadbc1fce7eafe0e283b99e31ace8e WHIRLPOOL 34ee4032cdabf20126d0bd863b330d88ff39dcd59e7a0e84c51f41f6b0ce167727ec9f0a3fc48652f39ec148f4a383ac80a0fbfdd982ea461488319c90da81c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSMInPAAoJEMbwO6tnXQ0spcYIAJOQEofBf00/rCLwXfiblViq
-llafNmYGkqLFc8aAPP/61VRqun3uUVd4yn+UXNj41bl18ImPujm6hSWw74ehP0TB
-lIctMLdzFLHWleAwPg2XXWPvMDE9reE34W7XgnCpjOngmnWwO/Mcwv7s5xxQYpG0
-lu4555/QSML3CAi4bsuUZb/uz1U+baAarUlmZN4LZB0wp55Pj5He8f8iW1dko3pO
-ZeNsxs8J9F1jxr0BBLY9OYeX3qcBYO9RP3Fy9a81uxdidAH9wHO97DP8iWlhRDxf
-4RldQVmbrD+YmkiKcEvj900k1n87N5braFknHLuqrhc9HK/heqV1PUKDHY6cuIw=
-=HJFM
+iQEcBAEBCAAGBQJSMI+wAAoJEMbwO6tnXQ0se5IIAMktyFLWLnlKBDU4K/wtsNvz
+4elpDtoi+YKPpGDuMebeHtESrHBqW/6B2CmD1++GHddSmuRxa3ktvkZuzrbRTUH+
+Y2C3zVApJf4Rb+xrwAxu5u5NOfilaJtHPKkLlI0cxrSucfxcHyAq47htNn8ncRSN
+RIMGwgUxraJR5Ikswr3zSSm/UYnyVXiqbjnzhlx3JDvLrLyyYMK1qG4Au4GJWnMs
+alb+J5/fqX5GmYcZdQgb+qpkH0YKebDP1UUEKysDPVEntDA4YE8m+mXLKUVedTTR
+Qupg4k+Ts0KWkrzaeLoGRFK0DWZVx3F47HfnDzKrMxDmmTtMuMAMmtfTfVkKYC4=
+=4uuR
 -----END PGP SIGNATURE-----
