@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kanyremote
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.37 2013/09/11 15:21:14 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.38 2013/09/11 15:46:19 kensington Exp $
+
+  11 Sep 2013; Michael Palimaka <kensington@gentoo.org> kanyremote-6.2.ebuild:
+  Fix failing patch wrt bug #484092. Tidy ebuild.
 
   11 Sep 2013; Michael Palimaka <kensington@gentoo.org> kanyremote-6.2.ebuild:
   Improve python support - enforce USE dependencies, allow the package to work
